src/objects/CustomObject24__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>sOqr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
                <value>
                    <fullName>已调回</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGdate__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>报告日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckResult__c</fullName>
        <label>检查结果</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactWay__c</fullName>
        <formula>Contacts__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>联系方式</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>常规技术报告 (联系人)</relationshipLabel>
        <relationshipName>z109</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFailure__c</fullName>
        <label>故障日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSurvey1__c</fullName>
        <label>检修日期1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSurvey2__c</fullName>
        <label>检修日期2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateSurvey3__c</fullName>
        <label>检修日期3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Owner:User.LfourDepartment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>部门</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentInstallationTime__c</fullName>
        <formula>EquipmentSerialNumber__r.installationdate__c</formula>
        <label>设备安装时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EquipmentModel__c</fullName>
        <formula>EquipmentSerialNumber__r.ProductModelCG__c</formula>
        <label>设备型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>EquipmentSerialNumber__r.ProductModelCG__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentSequenceNumber__c</fullName>
        <formula>FWQQ__r.DeviseSerialNumber__c</formula>
        <label>设备序列号（停用）</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EquipmentSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备系列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>SBpSkd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FWQQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求（停用）</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>i4Q5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FailureCause__c</fullName>
        <label>故障原因</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FaultPhenomenonDescription__c</fullName>
        <label>故障现象描述</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinalConclusion__c</fullName>
        <label>最终结论</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>返厂检测</fullName>
                </value>
                <value>
                    <fullName>报废处理</fullName>
                </value>
                <value>
                    <fullName>已维修好</fullName>
                </value>
                <value>
                    <fullName>免费更换</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FittingInstallationTime_del__c</fullName>
        <label>配件安装时间</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HeadquarterConclusion__c</fullName>
        <label>总部结论</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HeadquartersProcessingResults__c</fullName>
        <label>总部处理结果</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HeadquartersTestResults__c</fullName>
        <label>总部检测结果</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InformationSource__c</fullName>
        <label>信息来源</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintainer1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>检修人员1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>qWtJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintainer2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>检修人员2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>qWtd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintainer3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>检修人员3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>qWts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaintenanceProcedure__c</fullName>
        <label>维修过程</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MaintenanceResults__c</fullName>
        <label>维修结果</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaintenanceSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>维修负责人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>yf4p</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Malfunction__c</fullName>
        <label>故障（检查详述）</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NextStep__c</fullName>
        <label>下一步方案</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParetsName3__c</fullName>
        <formula>PartsNumber3__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName1__c</fullName>
        <formula>PartsNumber1__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsName2__c</fullName>
        <formula>PartsNumber2__r.ChineseDescription__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件名称2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartsNumber1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号1</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>cVyBEIJIAN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsNumber2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号2</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>常规技术报告 (备件编号2)</relationshipLabel>
        <relationshipName>IBha</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsNumber3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号3</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>常规技术报告 (备件编号3)</relationshipLabel>
        <relationshipName>IBhk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartsSerialNumber_del__c</fullName>
        <label>配件序列号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeiJianBZ__c</fullName>
        <label>配件原包装</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>有</fullName>
                </value>
                <value>
                    <fullName>无</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PeiJian__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>配件名称</label>
        <referenceTo>Accessories__c</referenceTo>
        <relationshipLabel>常规技术报告</relationshipLabel>
        <relationshipName>CSJf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProbeInstallationDate__c</fullName>
        <label>探头安装日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProbeSerialNumber__c</fullName>
        <label>探头序列号</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProbeType__c</fullName>
        <label>探头类型</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A探头</fullName>
                </value>
                <value>
                    <fullName>B探头</fullName>
                </value>
                <value>
                    <fullName>UBM探头</fullName>
                </value>
                <value>
                    <fullName>20M探头</fullName>
                </value>
                <value>
                    <fullName>25M探头</fullName>
                </value>
                <value>
                    <fullName>STS UBM 探头</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAN_number__c</fullName>
        <label>RAN number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordExamination1__c</fullName>
        <label>检修记录1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordExamination2__c</fullName>
        <label>检修记录2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RecordExamination3__c</fullName>
        <label>检修记录3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegionalTechnicalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域技术经理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rHHJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RepairQuotation__c</fullName>
        <label>维修报价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequirementsSuggestions__c</fullName>
        <label>要求及建议</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResultCode__c</fullName>
        <label>处理结果</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>已处理</fullName>
                </value>
                <value>
                    <fullName>未处理</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>解决结果</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                </value>
                <value>
                    <fullName>已解决</fullName>
                </value>
                <value>
                    <fullName>未解决</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReviewProceduresConclusions__c</fullName>
        <label>检查过程及结论</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SerialNumber1__c</fullName>
        <formula>PartsNumber1__r.PartNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件序列号1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber2__c</fullName>
        <formula>PartsNumber2__r.PartNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件序列号2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber3__c</fullName>
        <formula>PartsNumber3__r.PartNo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>备件序列号3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SolveDate__c</fullName>
        <label>解决日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TechnicalAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>技术助理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>rHIC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechnologyCenter__c</fullName>
        <label>技术中心</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>沈阳技术服务中心</fullName>
                </value>
                <value>
                    <fullName>北京技术服务中心</fullName>
                </value>
                <value>
                    <fullName>济南技术服务中心</fullName>
                </value>
                <value>
                    <fullName>上海技术服务中心</fullName>
                </value>
                <value>
                    <fullName>广州技术服务中心</fullName>
                </value>
                <value>
                    <fullName>西安技术服务中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术服务中心</fullName>
                </value>
                <value>
                    <fullName>香港技术服务中心</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypicalFailurePicture__c</fullName>
        <inlineHelpText>可上传图片</inlineHelpText>
        <label>典型故障图片</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UnsolvedCause__c</fullName>
        <label>未解决原因</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpkeepCosts__c</fullName>
        <label>维修费用</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>收费</fullName>
                </value>
                <value>
                    <fullName>免费</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bgqqmc__c</fullName>
        <formula>AccountName__r.Name &amp; &quot;-&quot;&amp;  EquipmentSerialNumber__r.Name  &amp; &quot;-&quot;  &amp; EquipmentSequenceNumber__c</formula>
        <label>报告请求名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpx__c</fullName>
        <label>产品线</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>光太</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>ROLAND</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>瑞贝科</fullName>
                </value>
                <value>
                    <fullName>雷蒙</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>常规技术报告</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>bgqqmc__c</columns>
        <columns>AccountName__c</columns>
        <columns>EquipmentSerialNumber__c</columns>
        <columns>EquipmentName__c</columns>
        <columns>EquipmentModel__c</columns>
        <columns>cpx__c</columns>
        <columns>TechnologyCenter__c</columns>
        <columns>RegionalTechnicalManager__c</columns>
        <columns>BGdate__c</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
        <language>zh_CN</language>
    </listViews>
    <nameField>
        <displayFormat>JSBG-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>报告编码</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>常规技术报告</pluralLabel>
    <recordTypes>
        <fullName>RecordTypejs</fullName>
        <active>true</active>
        <label>技术问题报告</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypepeijian</fullName>
        <active>true</active>
        <label>配件故障报告</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypett</fullName>
        <active>true</active>
        <label>探头故障报告</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>